--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&display=swap');
+
+body {
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+    background-color: #A7CCED;
+}
+
+
+
+ul li {
+    display: inline-block;
+    list-style: none;
+    padding: 0 1em;
+}
+
+/* FONTS */
+
+.font_1 {
+    font-family: 'Lora', serif;
+    font-size: 3em;
+    font-weight: 500;
+}
+
+.body_1 {
+    font-size: 1.5em;
+}
