--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,16 +1,48 @@
-<nav class="navbar">
-    <ul>
-        <li>Home</li>
-        <li>Projects</li>
-        <li>About</li>
-        <li>Contact</li>
-    </ul>
-</nav>
-<header>
-    <div class="home_text">
-        <p class="font_1">Lourdes Ramos</p>
-        <p class="body_1">Front End Developer</p>
+<section class="home_text position_relative">
+    <p class="font_1">Hi! It's Lourdes</p>
+    <p class="body_1">A Front End Developer</p>
+    <div class="logo">
+        <a target="_blank" href="https://github.com/ramoslourdes"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
+                alt=""></a>
+        <a target="_blank" href="https://www.linkedin.com/in/ramoslourdes/"><img
+                src="https://cdn-icons-png.flaticon.com/512/4401/4401412.png" alt=""></a>
+        <a target="_blank" href="mailto:ramoslouproject@gmail.com"><img src="https://cdn-icons-png.flaticon.com/512/3178/3178158.png"
+                alt=""></a>
     </div>
-    <div class="home_img">
+    <p>View resume</p>
+</section>
+
+<section class="about position_relative">
+    <!-- <p class="font_1">Who am I?</p> -->
+        <p class="font_3">Who Am I?</p>
+        <p>Hi! I am Lourdes, a self-taught web developer with a passion for problem solving. I also have a strong
+            interest in music and UX/UI design, and I firmly believe that in interface design, less is more.</p>
+    <article>
+        <p class="font_3">What I do?</p>
+        <p>I use tools like Angular and Bootstrap to bring web pages to life, ensuring they are functional and visually
+            appealing. Furthermore, I leverage my skills as a backend developer to add dynamism to my web creations.</p>
+    </article>
+
+    <article>
+        <p class="font_3">Where I go?</p>
+        <p>I am committed to lifelong learning, embracing practical problem-solving, and constantly enhancing my logical
+            and design skills. My ultimate goal is to find joy and fulfillment in my passions, which serve as a constant
+            source of inspiration in my life.</p>
+    </article>
+</section>
+
+<section class="projects position_relative">
+    <p class="font_1">My projects</p>
+    <div class="project">
+        <img src="\assets\project_soulup.jpeg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam possimus praesentium sequi omnis, assumenda
+            fugit placeat maxime libero numquam ullam autem optio perferendis doloribus, iusto et facere iure. Ipsa,
+            autem?</p>
     </div>
-</header>
+    <div class="project">
+        <img src="\assets\project_soulup.jpeg" alt="">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam possimus praesentium sequi omnis, assumenda
+            fugit placeat maxime libero numquam ullam autem optio perferendis doloribus, iusto et facere iure. Ipsa,
+            autem?</p>
+    </div>
+</section>
