--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&display=swap');
 
 body {
     margin: 0;
-    font-family: 'Inter', sans-serif;
-    background-color: #A7CCED;
+    font-family: 'Quicksand', sans-serif;
+    /* background-color: #E0E1DD; */
+    color: #fefefe;
+    /* color: #0D1B2A; */
 }
 
-
+ul {
+    padding: 0;
+}
 
 ul li {
     display: inline-block;
@@ -15,14 +19,35 @@ ul li {
     padding: 0 1em;
 }
 
+.text_center {
+    text-align: center;
+}
+
 /* FONTS */
 
 .font_1 {
     font-family: 'Lora', serif;
-    font-size: 3em;
+    font-size: 4em;
     font-weight: 500;
 }
 
+.font_2 {
+    font-family: 'Lora', serif;
+    font-size: 2em;
+    font-weight: 500;
+}
+
+.font_3 {
+    font-family: 'Lora', serif;
+    font-size: 1.5em;
+    font-weight: 500;
+}
+
+
 .body_1 {
     font-size: 1.5em;
+}
+
+.position_relative {
+    position: relative;
 }
